[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/block01.png" type="Texture" id=1]
[ext_resource path="res://src/Level.gd" type="Script" id=2]
[ext_resource path="res://src/Items.gd" type="Script" id=3]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/WinItem.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/LevelStart.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/back01.png" type="Texture" id=9]
[ext_resource path="res://shaders/vhs_scanlines.gdshader" type="Shader" id=10]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=5]
0/name = "block01.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 10 )
shader_param/overlay = true
shader_param/scanlines_opacity = 0.088
shader_param/scanlines_width = 0.197
shader_param/grille_opacity = 0.0
shader_param/resolution = Vector2( 800, 600 )
shader_param/pixelate = false
shader_param/roll = false
shader_param/roll_speed = 10.0
shader_param/roll_size = 0.0
shader_param/roll_variation = 1.8
shader_param/distort_intensity = 0.05
shader_param/noise_opacity = 0.4
shader_param/noise_speed = 5.0
shader_param/static_noise_intensity = 0.06
shader_param/aberration = 0.03
shader_param/brightness = 1.4
shader_param/discolor = false
shader_param/warp_amount = 0.084
shader_param/clip_warp = false
shader_param/vignette_intensity = 0.4
shader_param/vignette_opacity = 0.045

[node name="Main" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
color = Color( 0.603922, 0.580392, 0.713726, 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -514.5, -308.25 )
scale = Vector2( 8.03906, 4.85156 )
centered = false

[node name="Level" type="Node2D" parent="."]
script = ExtResource( 2 )
next_level_path = "res://scenes/levels/level07.tscn"

[node name="GameOver" parent="Level" instance=ExtResource( 5 )]

[node name="TileMap" type="TileMap" parent="Level"]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -458760, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -393224, 0, 0, -393221, 1073741824, 0, -458751, 1073741824, 0, -458745, 0, 0, -327688, 0, 0, -327685, 1073741824, 0, -393215, 1073741824, 0, -393209, 0, 0, -262152, 0, 0, -327679, 1073741824, 0, -327673, 0, 0, -196616, 0, 0, -262143, 1073741824, 0, -262137, 0, 0, -131080, 0, 0, -131077, 1073741824, 0, -196607, 1073741824, 0, -196601, 0, 0, -65544, 0, 0, -65541, 1073741824, 0, -131071, 1073741824, 0, -131070, 1073741824, 0, -131069, 1073741824, 0, -131065, 0, 0, -8, 0, 0, -5, 1073741824, 0, -65533, 1073741824, 0, -65529, 0, 0, 65528, 0, 0, 65531, 1073741824, 0, 3, 1073741824, 0, 7, 0, 0, 131064, 0, 0, 131067, 1073741824, 0, 65539, 1073741824, 0, 65543, 0, 0, 196600, 0, 0, 196603, 1073741824, 0, 131075, 1073741824, 0, 131079, 0, 0, 262136, 0, 0, 262139, 1073741824, 0, 262140, 1073741824, 0, 262141, 1073741824, 0, 262142, 1073741824, 0, 262143, 1073741824, 0, 196611, 1073741824, 0, 196615, 0, 0, 327672, 0, 0, 327679, 1073741824, 0, 262147, 1073741824, 0, 262151, 0, 0, 393208, 0, 0, 393215, 1073741824, 0, 327687, 0, 0, 458744, 0, 0, 458751, 1073741824, 0, 393223, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0 )

[node name="Items" type="Node" parent="Level"]
script = ExtResource( 3 )

[node name="WinItem2" parent="Level/Items" instance=ExtResource( 6 )]
position = Vector2( -64, 160 )
scale = Vector2( 0.51, 0.51 )

[node name="WinItem3" parent="Level/Items" instance=ExtResource( 6 )]
position = Vector2( -96, 64 )
scale = Vector2( 0.51, 0.51 )

[node name="WinItem4" parent="Level/Items" instance=ExtResource( 6 )]
position = Vector2( 64, 0 )
scale = Vector2( 0.51, 0.51 )

[node name="WinItem5" parent="Level/Items" instance=ExtResource( 6 )]
position = Vector2( 128, -192 )
scale = Vector2( 0.51, 0.51 )

[node name="Enemies" type="Node" parent="Level"]

[node name="Enemy" parent="Level/Enemies" instance=ExtResource( 4 )]
position = Vector2( -96, 192 )

[node name="Enemy2" parent="Level/Enemies" instance=ExtResource( 4 )]
position = Vector2( 0, 0 )

[node name="Enemy3" parent="Level/Enemies" instance=ExtResource( 4 )]
position = Vector2( 64, 96 )

[node name="Enemy4" parent="Level/Enemies" instance=ExtResource( 4 )]
position = Vector2( 160, -160 )

[node name="Player" parent="Level" instance=ExtResource( 7 )]
position = Vector2( -192, -224 )

[node name="LevelStart" parent="Level" instance=ExtResource( 8 )]

[node name="Camera2D" type="Camera2D" parent="Level"]
current = true

[node name="EndLevelTimer" type="Timer" parent="Level"]

[node name="background2" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( -256, -256 )
scale = Vector2( 4, 4 )
z_index = 20
texture = ExtResource( 9 )
centered = false

[connection signal="game_over" from="Level/Player" to="Level" method="_on_Player_game_over"]
[connection signal="timeout" from="Level/EndLevelTimer" to="Level" method="_on_EndLevelTimer_timeout"]
